# work

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.test  LICENSE.md  README.md  RELEASE.md  mise.toml
.agents/: INSTRUCTIONS.md  config.toml  sync.sh
.agents/skills/agents/: SKILL.md
.agents/skills/commands/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/docker-test/: SKILL.md
.agents/skills/style-reviewer/: SKILL.md
.agents/skills/update-readme/: SKILL.md
.claude/skills/commands/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/github-actions/: SKILL.md
.claude/skills/style-reviewer/: SKILL.md
.claude/skills/testing/: SKILL.md
.codex/skills/agents/: SKILL.md
.config/: lefthook.toml  mise.toml
.github/workflows/: ci.yml  release.yml
.mise/tasks/: bump
docs/: CONFIGURATION.md  POOL.md  architecture.html  commands.html  configuration.html  getting-started.html  index.html  providers.html  style.css
docs/logs/: 2026-02-25-01-client-server-async-staging-audit-recommendations.md  2026-02-25-client-server-recs.md
migrations/: 0001_init.sql  0002_environment_failed_status.sql  0003_task_environment_not_null.sql  0004_jobs_queue_metadata.sql
shell/: init.bash  init.fish  init.zsh
src/: cli.rs  client.rs  completions.rs  config.rs  db.rs  error.rs  extensions.rs  id.rs  logger.rs  main.rs  paths.rs  projects.rs  state.rs  tui.rs  workd.rs
src/adapters/: mod.rs  worktree.rs
src/commands/: config.rs  daemon.rs  daemon_install.rs  doctor.rs  init.rs  install_skill.rs  mod.rs  pool.rs  projects.rs  sessions.rs  tasks.rs  tree.rs
src/daemon/: events.rs  jobs.rs  mod.rs  routes.rs
src/db/: migrations.rs  mod.rs
src/environment/: apfs_worktree.rs  git_worktree.rs  mod.rs  script.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: daemon.rs  database.rs
tests/common/: mod.rs
tests/docker/: entrypoint.sh  harness.sh  test_project_detection.sh
(+7 files in other folders)
