[package]
name = "work"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "0.6"
anstyle = "1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
sysinfo = "0.35"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
