[package]
name = "work"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5.60", features = ["derive", "env"] }
crossterm = "0.28"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
dirs = "6"
http-body-util = "0.1"
ratatui = "0.29"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
assert_cmd = "2"
nix = { version = "0.29", features = ["signal"] }
predicates = "3"
rusqlite = "0.34"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
